@@ -1,3 +1,13 @@
+2004-02-17  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=133214
+	* acinclude.m4 : quote the AC_DEFUN as per patch from
+	  alexander.winston@comcast.net
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=124064
+	* configure.in : add a test for ngettext.  Used the same test as
+	  gnome-vfs for consitency.
+
 2004-02-13  Jody Goldberg <jody@gnome.org>
 
 	* configure.in : post release bump
